# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/ability/ability_runtime/ability_runtime.gni")

group("fuzztest") {
  testonly = true

  deps = [
    "abilityattachtimeout_fuzzer:fuzztest",
    "abilityconnectionstub_fuzzer:fuzztest",
    "abilityconnectmanager_fuzzer:fuzztest",
    "abilitycontext_fuzzer:fuzztest",
    "abilityeventhandler_fuzzer:fuzztest",

    # "abilitymanager_fuzzer:fuzztest",
    "abilityrunningrecord_fuzzer:fuzztest",

    # "abilityschedulerstub_fuzzer:fuzztest",
    "abilitytransitiondone_fuzzer:fuzztest",
    "acquiredataability_fuzzer:fuzztest",
    "addabilitystagedone_fuzzer:fuzztest",
    "amsmgrscheduler_fuzzer:fuzztest",
    "applicationanrlistener_fuzzer:fuzztest",
    "applifecycledeal_fuzzer:fuzztest",
    "appmanager_fuzzer:fuzztest",
    "appmgrrest_fuzzer:fuzztest",
    "appmgrservicefirst_fuzzer:fuzztest",
    "appmgrserviceinnerfirst_fuzzer:fuzztest",
    "appmgrserviceinnersecond_fuzzer:fuzztest",
    "apprunningmanager_fuzzer:fuzztest",
    "apprunningrecordfirst_fuzzer:fuzztest",
    "apprunningrecordsecond_fuzzer:fuzztest",

    # "atomicservicestatuscallbackstub_fuzzer:fuzztest",
    "attachabilitythread_fuzzer:fuzztest",
    "attachrenderprocess_fuzzer:fuzztest",
    "blockability_fuzzer:fuzztest",
    "blockamsservice_fuzzer:fuzztest",
    "blockappservice_fuzzer:fuzztest",
    "cancelwantsender_fuzzer:fuzztest",
    "cleanallmissions_fuzzer:fuzztest",
    "cleanmission_fuzzer:fuzztest",
    "clearupapplicationdata_fuzzer:fuzztest",
    "closeability_fuzzer:fuzztest",
    "completefirstframedrawing_fuzzer:fuzztest",
    "connectability_fuzzer:fuzztest",
    "connectionstatemanager_fuzzer:fuzztest",
    "continueability_fuzzer:fuzztest",

    # "continuemission_fuzzer:fuzztest",
    "dataabilitymanager_fuzzer:fuzztest",
    "delegatordoabilitybackground_fuzzer:fuzztest",
    "delegatordoabilityforeground_fuzzer:fuzztest",

    # "disconnectability_fuzzer:fuzztest",
    "doabilitybackground_fuzzer:fuzztest",
    "doabilityforeground_fuzzer:fuzztest",
    "dumpabilityinfodone_fuzzer:fuzztest",
    "dumpstate_fuzzer:fuzztest",
    "dumpsysstate_fuzzer:fuzztest",
    "finishusertest_fuzzer:fuzztest",
    "forcetimeoutfortest_fuzzer:fuzztest",
    "freeinstallabilityfromremote_fuzzer:fuzztest",
    "getabilityrecordsbyprocessid_fuzzer:fuzztest",
    "getabilityrunninginfos_fuzzer:fuzztest",
    "getapplicationinfobyprocessid_fuzzer:fuzztest",
    "getappmemorysize_fuzzer:fuzztest",
    "getconfiguration_fuzzer:fuzztest",
    "getextensionrunninginfos_fuzzer:fuzztest",
    "getmissionidbytoken_fuzzer:fuzztest",
    "getmissioninfos_fuzzer:fuzztest",
    "getmissionsnapshot_fuzzer:fuzztest",
    "getprocessrunninginfos_fuzzer:fuzztest",
    "getprocessrunninginfosbyuserid_fuzzer:fuzztest",
    "getrenderprocessterminationstatus_fuzzer:fuzztest",
    "getrunningprocessinfobytoken_fuzzer:fuzztest",
    "gettopability_fuzzer:fuzztest",
    "getwantsender_fuzzer:fuzztest",
    "handledlpapp_fuzzer:fuzztest",
    "isramconstraineddevice_fuzzer:fuzztest",
    "killapplication_fuzzer:fuzztest",
    "killapplicationself_fuzzer:fuzztest",
    "killprocessbyabilitytoken_fuzzer:fuzztest",
    "killprocessesbybundlename_fuzzer:fuzztest",
    "killprocessesbyuserid_fuzzer:fuzztest",
    "killprocesswithaccount_fuzzer:fuzztest",
    "loadability_fuzzer:fuzztest",
    "lockmissionforcleanup_fuzzer:fuzztest",
    "minimizeability_fuzzer:fuzztest",
    "missionlistenerstub_fuzzer:fuzztest",
    "missionlistmanagerfirst_fuzzer:fuzztest",
    "missionlistmanagersecond_fuzzer:fuzztest",
    "modulerunningrecord_fuzzer:fuzztest",
    "movemissiontofront_fuzzer:fuzztest",
    "notifycompletecontinuation_fuzzer:fuzztest",
    "notifycontinuationresult_fuzzer:fuzztest",
    "notifymemorylevel_fuzzer:fuzztest",
    "pendingwantmanager_fuzzer:fuzztest",
    "prepareterminate_fuzzer:fuzztest",
    "prestartnwebspawnprocess_fuzzer:fuzztest",
    "registerabilitylifecyclecallback_fuzzer:fuzztest",
    "registerapplicationstateobserver_fuzzer:fuzztest",
    "registerconfigurationobserver_fuzzer:fuzztest",
    "registerenvironmentcallback_fuzzer:fuzztest",
    "registermissionlistener_fuzzer:fuzztest",
    "releasecall_fuzzer:fuzztest",
    "releasedataability_fuzzer:fuzztest",
    "remotemissionlistenerstub_fuzzer:fuzztest",
    "scheduleacceptwantdone_fuzzer:fuzztest",
    "schedulecommandabilitydone_fuzzer:fuzztest",
    "scheduleconnectabilitydone_fuzzer:fuzztest",
    "scheduledisconnectabilitydone_fuzzer:fuzztest",
    "sendanrprocessid_fuzzer:fuzztest",
    "sendresulttoability_fuzzer:fuzztest",
    "setabilitycontroller_fuzzer:fuzztest",
    "setmissionicon_fuzzer:fuzztest",
    "setmissionlabel_fuzzer:fuzztest",
    "startability_fuzzer:fuzztest",
    "startabilitybycall_fuzzer:fuzztest",
    "startcontinuation_fuzzer:fuzztest",
    "startrenderprocess_fuzzer:fuzztest",
    "startserviceextensionability_fuzzer:fuzztest",
    "startspecifiedability_fuzzer:fuzztest",
    "startsyncremotemissions_fuzzer:fuzztest",
    "startupresidentprocess_fuzzer:fuzztest",
    "startuser_fuzzer:fuzztest",
    "startusertest_fuzzer:fuzztest",
    "startusertestprocess_fuzzer:fuzztest",
    "stopserviceability_fuzzer:fuzztest",
    "stopserviceextensionability_fuzzer:fuzztest",
    "stopsyncremotemissions_fuzzer:fuzztest",
    "stopuser_fuzzer:fuzztest",
    "stopusercallbackstub_fuzzer:fuzztest",
    "systemabilitytokencallbackstub_fuzzer:fuzztest",
    "terminateability_fuzzer:fuzztest",
    "terminateabilityresult_fuzzer:fuzztest",
    "unlockmissionforcleanup_fuzzer:fuzztest",
    "unregisterabilitylifecyclecallback_fuzzer:fuzztest",
    "unregisterapplicationstateobserver_fuzzer:fuzztest",
    "unregisterenvironmentcallback_fuzzer:fuzztest",
    "unregistermissionlistener_fuzzer:fuzztest",
    "updateabilitystate_fuzzer:fuzztest",
    "updateconfiguration_fuzzer:fuzztest",
    "updateextensionstate_fuzzer:fuzztest",
    "updatemissionsnapshot_fuzzer:fuzztest",
    "uripermissionmanager_fuzzer:fuzztest",
    "wantagenthelperstring_fuzzer:fuzztest",
    "wantagenthelpertrigger_fuzzer:fuzztest",

    # "wantreceiverstub_fuzzer:fuzztest",
    "wantsenderstub_fuzzer:fuzztest",
  ]
}
