# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/ability/ability_runtime/ability_runtime.gni")

group("fuzztest") {
  testonly = true

  deps = [
    "abilitystubabilityrecovery_fuzzer:fuzztest",
    "abilitystubabilityrecoveryenable_fuzzer:fuzztest",
    "abilitystubabilitytransitiondone_fuzzer:fuzztest",
    "abilitystubacquiredataability_fuzzer:fuzztest",
    "abilitystubacquiresharedata_fuzzer:fuzztest",
    "abilitystubaddfreeinstallobserver_fuzzer:fuzztest",
    "abilitystubattachabilitythread_fuzzer:fuzztest",
    "abilitystubcallrequestdone_fuzzer:fuzztest",
    "abilitystubcalluiabilitybyscb_fuzzer:fuzztest",
    "abilitystubcancelwantsender_fuzzer:fuzztest",
    "abilitystubcheckuiextensionisfocused_fuzzer:fuzztest",
    "abilitystubcleanallmissions_fuzzer:fuzztest",
    "abilitystubcleanmission_fuzzer:fuzztest",
    "abilitystubclearupapplicationdata_fuzzer:fuzztest",
    "abilitystubcloseuiabilitybyscb_fuzzer:fuzztest",
    "abilitystubcommandabilitydone_fuzzer:fuzztest",
    "abilitystubcommandabilitywindowdone_fuzzer:fuzztest",
    "abilitystubcompletefirstframedrawing_fuzzer:fuzztest",
    "abilitystubconnectability_fuzzer:fuzztest",
    "abilitystubconnectabilitydone_fuzzer:fuzztest",
    "abilitystubconnectabilitywithtype_fuzzer:fuzztest",
    "abilitystubconnectuiextensionability_fuzzer:fuzztest",
    "abilitystubcontinueability_fuzzer:fuzztest",
    "abilitystubcontinuemission_fuzzer:fuzztest",
    "abilitystubcontinuemissionofbundlename_fuzzer:fuzztest",
    "abilitystubdelegatordoabilitybackground_fuzzer:fuzztest",
    "abilitystubdelegatordoabilityforeground_fuzzer:fuzztest",
    "abilitystubdisconnectability_fuzzer:fuzztest",
    "abilitystubdisconnectabilitydone_fuzzer:fuzztest",
    "abilitystubdoabilitybackground_fuzzer:fuzztest",
    "abilitystubdoabilityforeground_fuzzer:fuzztest",
    "abilitystubdumpabilityinfodone_fuzzer:fuzztest",
    "abilitystubdumpstate_fuzzer:fuzztest",
    "abilitystubdumpsysstate_fuzzer:fuzztest",
    "abilitystubfinishusertest_fuzzer:fuzztest",
    "abilitystubforceexitapp_fuzzer:fuzztest",
    "abilitystubfreeinstallabilityfromremote_fuzzer:fuzztest",
    "abilitystubgetabilityrunninginfo_fuzzer:fuzztest",
    "abilitystubgetabilitytoken_fuzzer:fuzztest",
    "abilitystubgetappmemorysize_fuzzer:fuzztest",
    "abilitystubgetdlpconnectioninfos_fuzzer:fuzztest",
    "abilitystubgetelementnamebytoken_fuzzer:fuzztest",
    "abilitystubgetextensionrunninginfo_fuzzer:fuzztest",
    "abilitystubgetmissionidbytoken_fuzzer:fuzztest",
    "abilitystubgetmissioninfo_fuzzer:fuzztest",
    "abilitystubgetmissioninfos_fuzzer:fuzztest",
    "abilitystubgetmissionsnapshotinfo_fuzzer:fuzztest",
    "abilitystubgetpendingrequestwant_fuzzer:fuzztest",
    "abilitystubgetpendingwantbundlename_fuzzer:fuzztest",
    "abilitystubgetpendingwantcode_fuzzer:fuzztest",
    "abilitystubgetpendingwanttype_fuzzer:fuzztest",
    "abilitystubgetpendingwantuid_fuzzer:fuzztest",
    "abilitystubgetpendingwantuserid_fuzzer:fuzztest",
    "abilitystubgetprocessrunninginfo_fuzzer:fuzztest",
    "abilitystubgettopability_fuzzer:fuzztest",
    "abilitystubgettopabilitytoken_fuzzer:fuzztest",
    "abilitystubgetwantsender_fuzzer:fuzztest",
    "abilitystubgetwantsendinfo_fuzzer:fuzztest",
    "abilitystubisramconstraineddevice_fuzzer:fuzztest",
    "abilitystubisrunninginstabilitytest_fuzzer:fuzztest",
    "abilitystubkillprocess_fuzzer:fuzztest",
    "abilitystublockmissionforcleanup_fuzzer:fuzztest",
    "abilitystubminimizeability_fuzzer:fuzztest",
    "abilitystubminimizeuiabilitybyscb_fuzzer:fuzztest",
    "abilitystubminimizeuiextensionability_fuzzer:fuzztest",
    "abilitystubmoveabilitytobackground_fuzzer:fuzztest",
    "abilitystubmovemissionstobackground_fuzzer:fuzztest",
    "abilitystubmovemissionstoforeground_fuzzer:fuzztest",
    "abilitystubmovemissiontofront_fuzzer:fuzztest",
    "abilitystubmovemissiontofrontbyoptions_fuzzer:fuzztest",
    "abilitystubnotifycompletecontinuation_fuzzer:fuzztest",
    "abilitystubnotifycontinuationresult_fuzzer:fuzztest",
    "abilitystubnotifysaveasresult_fuzzer:fuzztest",
    "abilitystubprepareterminateability_fuzzer:fuzztest",
    "abilitystubquerymissionvaild_fuzzer:fuzztest",
    "abilitystubrecordappexitreason_fuzzer:fuzztest",
    "abilitystubregistercancellistener_fuzzer:fuzztest",
    "abilitystubregistercollaborator_fuzzer:fuzztest",
    "abilitystubregisterconnectionobserver_fuzzer:fuzztest",
    "abilitystubregistermissionlistener_fuzzer:fuzztest",
    "abilitystubregisterremotemissionlistener_fuzzer:fuzztest",
    "abilitystubregisterremoteofflistener_fuzzer:fuzztest",
    "abilitystubregisterremoteonlistener_fuzzer:fuzztest",
    "abilitystubregisterwmshandler_fuzzer:fuzztest",
    "abilitystubreleasecallability_fuzzer:fuzztest",
    "abilitystubreleasedataability_fuzzer:fuzztest",
    "abilitystubreportdrawncompleted_fuzzer:fuzztest",
    "abilitystubrequestdialogservice_fuzzer:fuzztest",
    "abilitystubsendresulttoability_fuzzer:fuzztest",
    "abilitystubsendwantsender_fuzzer:fuzztest",
    "abilitystubsetabilitycontroller_fuzzer:fuzztest",
    "abilitystubsetmissioncontinuestate_fuzzer:fuzztest",
    "abilitystubsetmissionicon_fuzzer:fuzztest",
    "abilitystubsetmissionlabel_fuzzer:fuzztest",
    "abilitystubsetrootscenesession_fuzzer:fuzztest",
    "abilitystubsetsessionmanagerservice_fuzzer:fuzztest",
    "abilitystubsharedatadone_fuzzer:fuzztest",
    "abilitystubstartability_fuzzer:fuzztest",
    "abilitystubstartabilityaddcaller_fuzzer:fuzztest",
    "abilitystubstartabilityascallerbytoken_fuzzer:fuzztest",
    "abilitystubstartabilityascallerforoptions_fuzzer:fuzztest",
    "abilitystubstartabilitybycall_fuzzer:fuzztest",
    "abilitystubstartabilityforoptions_fuzzer:fuzztest",
    "abilitystubstartabilityforsettings_fuzzer:fuzztest",
    "abilitystubstartcontinuation_fuzzer:fuzztest",
    "abilitystubstartextensionability_fuzzer:fuzztest",
    "abilitystubstartspecifiedabilitybyscb_fuzzer:fuzztest",
    "abilitystubstartsyncmissions_fuzzer:fuzztest",
    "abilitystubstartuiabilitybyscb_fuzzer:fuzztest",
    "abilitystubstartuiextensionability_fuzzer:fuzztest",
    "abilitystubstartuser_fuzzer:fuzztest",
    "abilitystubstartusertest_fuzzer:fuzztest",
    "abilitystubstopextensionability_fuzzer:fuzztest",
    "abilitystubstopserviceability_fuzzer:fuzztest",
    "abilitystubstopsyncmissions_fuzzer:fuzztest",
    "abilitystubstopuser_fuzzer:fuzztest",
    "abilitystubterminateability_fuzzer:fuzztest",
    "abilitystubterminateuiextensionability_fuzzer:fuzztest",
    "abilitystubuninstallapp_fuzzer:fuzztest",
    "abilitystubunlockmissionforcleanup_fuzzer:fuzztest",
    "abilitystubunregistercancellistener_fuzzer:fuzztest",
    "abilitystubunregistercollaborator_fuzzer:fuzztest",
    "abilitystubunregisterconnectionobserver_fuzzer:fuzztest",
    "abilitystubunregistermissionlistener_fuzzer:fuzztest",
    "abilitystubunregisterremotemissionlistener_fuzzer:fuzztest",
    "abilitystubupdatemissionsnapshotfromwms_fuzzer:fuzztest",
    "abilitystubverifypermission_fuzzer:fuzztest",
    "amsmanager_fuzzer:fuzztest",
    "appmanager_fuzzer:fuzztest",
  ]
}
