# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/ability/ability_runtime/ability_runtime.gni")

group("fuzztest") {
  testonly = true

  deps = [
    "abilityappdebuginfo_fuzzer:fuzztest",
    "abilityappdebugmanager_fuzzer:fuzztest",
    "abilityappdfrapplicationanrlistener_fuzzer:fuzztest",
    "abilityappfreezemanager_fuzzer:fuzztest",
    "abilityappjsheapmeminfo_fuzzer:fuzztest",
    "abilityappmgrapprunningmanager_fuzzer:fuzztest",
    "abilityappmgrevent_fuzzer:fuzztest",
    "abilityappmgrpagestatedata_fuzzer:fuzztest",
    "abilityappmgrrenderstatedata_fuzzer:fuzztest",
    "abilityappmgrrenderstateobservermanager_fuzzer:fuzztest",
    "abilityappmgrrunningmultiinfo_fuzzer:fuzztest",
    "abilityapppreloader_fuzzer:fuzztest",
    "abilityattachtimeout_fuzzer:fuzztest",
    "abilityautostartupdatamanager_fuzzer:fuzztest",
    "abilityautostartupdatamanagera_fuzzer:fuzztest",
    "abilityautostartupdatamanagerb_fuzzer:fuzztest",
    "abilityautostartupservicea_fuzzer:fuzztest",
    "abilityautostartupserviceb_fuzzer:fuzztest",
    "abilitybackgroundconnection_fuzzer:fuzztest",
    "abilitycachemanagera_fuzzer:fuzztest",
    "abilitychildprocessinfo_fuzzer:fuzztest",
    "abilitychildprocessinfo_fuzzer:fuzztest",
    "abilitychildprocessrecord_fuzzer:fuzztest",
    "abilitychildprocessrecord_fuzzer:fuzztest",
    "abilityconnectionstub_fuzzer:fuzztest",
    "abilitycontext_fuzzer:fuzztest",
    "abilitydebugdeal_fuzzer:fuzztest",
    "abilitydebugresponseproxy_fuzzer:fuzztest",
    "abilityeventutil_fuzzer:fuzztest",
    "abilityfirstframestateobservermanager_fuzzer:fuzztest",
    "abilityforegroundstateobserverproxy_fuzzer:fuzztest",
    "abilityframeworksnativejsworker_fuzzer:fuzztest",
    "abilityframeworksnativeohosjsenvlogger_fuzzer:fuzztest",
    "abilityinterfacesappmanageramsmgrstub_fuzzer:fuzztest",
    "abilityinterfacesappmanageramsmgrstub_fuzzer:fuzztest",
    "abilityinterfacesappmgrabilitydebugresponseproxy_fuzzer:fuzztest",
    "abilityinterfacesappmgrappdebuglistenerproxy_fuzzer:fuzztest",
    "abilityinterfacesappmgrappdebuglistenerstub_fuzzer:fuzztest",
    "abilityinterfacesappmgrappforegroundstateobserverstub_fuzzer:fuzztest",
    "abilityinterfacesappmgrchildschedulerproxy_fuzzer:fuzztest",
    "abilityinterfacesappmgrchildschedulerstub_fuzzer:fuzztest",
    "abilityinterfacesappmgrnativechildnotifyproxy_fuzzer:fuzztest",
    "abilityinterfacesappmgrnativechildnotifystub_fuzzer:fuzztest",
    "abilityinterfacesappmgrrenderstateobserverstub_fuzzer:fuzztest",
    "abilitymanagereventsubscriber_fuzzer:fuzztest",
    "abilitymanagerserviceb_fuzzer:fuzztest",
    "abilitymanagerservicec_fuzzer:fuzztest",
    "abilitymanagerserviced_fuzzer:fuzztest",
    "abilitymanagerserviceeighth_fuzzer:fuzztest",
    "abilitymanagerservicef_fuzzer:fuzztest",
    "abilitymanagerservicefifth_fuzzer:fuzztest",
    "abilitymanagerservicefirst_fuzzer:fuzztest",
    "abilitymanagerservicefourth_fuzzer:fuzztest",
    "abilitymanagerserviceg_fuzzer:fuzztest",
    "abilitymanagerserviceninth_fuzzer:fuzztest",
    "abilitymanagerservicesecond_fuzzer:fuzztest",
    "abilitymanagerservicesixth_fuzzer:fuzztest",
    "abilitymanagerservicethird_fuzzer:fuzztest",
    "abilitymemorylevelinfo_fuzzer:fuzztest",
    "abilitymgrabilitymanagerstub_fuzzer:fuzztest",
    "abilitymgrappexitreasonhelper_fuzzer:fuzztest",
    "abilitymgrcontrolinterceptor_fuzzer:fuzztest",
    "abilitymgrdisposedruleinterceptor_fuzzer:fuzztest",
    "abilitymgrecologicalruleinterceptor_fuzzer:fuzztest",
    "abilitymgrecologicalrulemgrserviceparam_fuzzer:fuzztest",
    "abilitymgrextensionrecord_fuzzer:fuzztest",
    "abilitymgrinsightintentexecutemanager_fuzzer:fuzztest",
    "abilitymgrinsightintentexecuteresult_fuzzer:fuzztest",
    "abilitymgrinsightintentutils_fuzzer:fuzztest",
    "abilitymgrinterceptorexecuter_fuzzer:fuzztest",
    "abilitymgrjumpinterceptor_fuzzer:fuzztest",
    "abilitymgrrdbparserutil_fuzzer:fuzztest",
    "abilitymgrrest_fuzzer:fuzztest",
    "abilitymgrrestartappmanager_fuzzer:fuzztest",
    "abilitymgruiextensionrecord_fuzzer:fuzztest",
    "abilitymgruiextensionrecord_fuzzer:fuzztest",
    "abilitymgruiextensionsessioninfo_fuzzer:fuzztest",
    "abilityrunningrecord_fuzzer:fuzztest",
    "abilitystubabilityrecovery_fuzzer:fuzztest",
    "abilitystubabilityrecoveryenable_fuzzer:fuzztest",
    "abilitystubabilitytransitiondone_fuzzer:fuzztest",
    "abilitystubacquiredataability_fuzzer:fuzztest",
    "abilitystubacquiresharedata_fuzzer:fuzztest",
    "abilitystubaddfreeinstallobserver_fuzzer:fuzztest",
    "abilitystubattachabilitythread_fuzzer:fuzztest",
    "abilitystubcallrequestdone_fuzzer:fuzztest",
    "abilitystubcalluiabilitybyscb_fuzzer:fuzztest",
    "abilitystubcancelwantsender_fuzzer:fuzztest",
    "abilitystubcheckuiextensionisfocused_fuzzer:fuzztest",
    "abilitystubcleanallmissions_fuzzer:fuzztest",
    "abilitystubcleanmission_fuzzer:fuzztest",
    "abilitystubcloseuiabilitybyscb_fuzzer:fuzztest",
    "abilitystubcommandabilitydone_fuzzer:fuzztest",
    "abilitystubcommandabilitywindowdone_fuzzer:fuzztest",
    "abilitystubcompletefirstframedrawing_fuzzer:fuzztest",
    "abilitystubconnectability_fuzzer:fuzztest",
    "abilitystubconnectabilitydone_fuzzer:fuzztest",
    "abilitystubconnectabilitywithtype_fuzzer:fuzztest",
    "abilitystubconnectuiextensionability_fuzzer:fuzztest",
    "abilitystubcontinueability_fuzzer:fuzztest",
    "abilitystubcontinuemission_fuzzer:fuzztest",
    "abilitystubcontinuemissionofbundlename_fuzzer:fuzztest",
    "abilitystubdelegatordoabilitybackground_fuzzer:fuzztest",
    "abilitystubdelegatordoabilityforeground_fuzzer:fuzztest",
    "abilitystubdisconnectability_fuzzer:fuzztest",
    "abilitystubdisconnectabilitydone_fuzzer:fuzztest",
    "abilitystubdoabilitybackground_fuzzer:fuzztest",
    "abilitystubdoabilityforeground_fuzzer:fuzztest",
    "abilitystubdumpabilityinfodone_fuzzer:fuzztest",
    "abilitystubdumpstate_fuzzer:fuzztest",
    "abilitystubdumpsysstate_fuzzer:fuzztest",
    "abilitystubfinishusertest_fuzzer:fuzztest",
    "abilitystubforceexitapp_fuzzer:fuzztest",
    "abilitystubfreeinstallabilityfromremote_fuzzer:fuzztest",
    "abilitystubgetabilityrunninginfo_fuzzer:fuzztest",
    "abilitystubgetabilitystatebypersistentid_fuzzer:fuzztest",
    "abilitystubgetabilitytoken_fuzzer:fuzztest",
    "abilitystubgetappmemorysize_fuzzer:fuzztest",
    "abilitystubgetdlpconnectioninfos_fuzzer:fuzztest",
    "abilitystubgetelementnamebytoken_fuzzer:fuzztest",
    "abilitystubgetextensionrunninginfo_fuzzer:fuzztest",
    "abilitystubgetmissionidbytoken_fuzzer:fuzztest",
    "abilitystubgetmissioninfo_fuzzer:fuzztest",
    "abilitystubgetmissioninfos_fuzzer:fuzztest",
    "abilitystubgetmissionsnapshotinfo_fuzzer:fuzztest",
    "abilitystubgetpendingrequestwant_fuzzer:fuzztest",
    "abilitystubgetpendingwantbundlename_fuzzer:fuzztest",
    "abilitystubgetpendingwantcode_fuzzer:fuzztest",
    "abilitystubgetpendingwanttype_fuzzer:fuzztest",
    "abilitystubgetpendingwantuid_fuzzer:fuzztest",
    "abilitystubgetpendingwantuserid_fuzzer:fuzztest",
    "abilitystubgetprocessrunninginfo_fuzzer:fuzztest",
    "abilitystubgettopability_fuzzer:fuzztest",
    "abilitystubgettopabilitytoken_fuzzer:fuzztest",
    "abilitystubgetwantsender_fuzzer:fuzztest",
    "abilitystubgetwantsendinfo_fuzzer:fuzztest",
    "abilitystubinterface_fuzzer:fuzztest",
    "abilitystubisramconstraineddevice_fuzzer:fuzztest",
    "abilitystubisrunninginstabilitytest_fuzzer:fuzztest",
    "abilitystubkillprocess_fuzzer:fuzztest",
    "abilitystublockmissionforcleanup_fuzzer:fuzztest",
    "abilitystubminimizeability_fuzzer:fuzztest",
    "abilitystubminimizeuiabilitybyscb_fuzzer:fuzztest",
    "abilitystubminimizeuiextensionability_fuzzer:fuzztest",
    "abilitystubmoveabilitytobackground_fuzzer:fuzztest",
    "abilitystubmovemissionstobackground_fuzzer:fuzztest",
    "abilitystubmovemissionstoforeground_fuzzer:fuzztest",
    "abilitystubmovemissiontofront_fuzzer:fuzztest",
    "abilitystubmovemissiontofrontbyoptions_fuzzer:fuzztest",
    "abilitystubnotifycompletecontinuation_fuzzer:fuzztest",
    "abilitystubnotifycontinuationresult_fuzzer:fuzztest",
    "abilitystubnotifysaveasresult_fuzzer:fuzztest",
    "abilitystubprepareterminateability_fuzzer:fuzztest",
    "abilitystubquerymissionvaild_fuzzer:fuzztest",
    "abilitystubrecordappexitreason_fuzzer:fuzztest",
    "abilitystubregistercancellistener_fuzzer:fuzztest",
    "abilitystubregistercollaborator_fuzzer:fuzztest",
    "abilitystubregisterconnectionobserver_fuzzer:fuzztest",
    "abilitystubregistermissionlistener_fuzzer:fuzztest",
    "abilitystubregisterremotemissionlistener_fuzzer:fuzztest",
    "abilitystubregisterremoteofflistener_fuzzer:fuzztest",
    "abilitystubregisterremoteonlistener_fuzzer:fuzztest",
    "abilitystubregisterwmshandler_fuzzer:fuzztest",
    "abilitystubreleasecallability_fuzzer:fuzztest",
    "abilitystubreleasedataability_fuzzer:fuzztest",
    "abilitystubreportdrawncompleted_fuzzer:fuzztest",
    "abilitystubrequestdialogservice_fuzzer:fuzztest",
    "abilitystubsendresulttoability_fuzzer:fuzztest",
    "abilitystubsendwantsender_fuzzer:fuzztest",
    "abilitystubsetabilitycontroller_fuzzer:fuzztest",
    "abilitystubsetmissioncontinuestate_fuzzer:fuzztest",
    "abilitystubsetmissionicon_fuzzer:fuzztest",
    "abilitystubsetmissionlabel_fuzzer:fuzztest",
    "abilitystubsetrootscenesession_fuzzer:fuzztest",
    "abilitystubsetsessionmanagerservice_fuzzer:fuzztest",
    "abilitystubsharedatadone_fuzzer:fuzztest",
    "abilitystubstartability_fuzzer:fuzztest",
    "abilitystubstartabilityaddcaller_fuzzer:fuzztest",
    "abilitystubstartabilityascallerbytoken_fuzzer:fuzztest",
    "abilitystubstartabilityascallerforoptions_fuzzer:fuzztest",
    "abilitystubstartabilitybycall_fuzzer:fuzztest",
    "abilitystubstartabilityforoptions_fuzzer:fuzztest",
    "abilitystubstartabilityforsettings_fuzzer:fuzztest",
    "abilitystubstartcontinuation_fuzzer:fuzztest",
    "abilitystubstartextensionability_fuzzer:fuzztest",
    "abilitystubstartspecifiedabilitybyscb_fuzzer:fuzztest",
    "abilitystubstartsyncmissions_fuzzer:fuzztest",
    "abilitystubstartuiabilitybyscb_fuzzer:fuzztest",
    "abilitystubstartuiextensionability_fuzzer:fuzztest",
    "abilitystubstartuser_fuzzer:fuzztest",
    "abilitystubstartusertest_fuzzer:fuzztest",
    "abilitystubstopextensionability_fuzzer:fuzztest",
    "abilitystubstopserviceability_fuzzer:fuzztest",
    "abilitystubstopsyncmissions_fuzzer:fuzztest",
    "abilitystubstopuser_fuzzer:fuzztest",
    "abilitystubterminateability_fuzzer:fuzztest",
    "abilitystubterminateuiextensionability_fuzzer:fuzztest",
    "abilitystubuninstallapp_fuzzer:fuzztest",
    "abilitystubunlockmissionforcleanup_fuzzer:fuzztest",
    "abilitystubunregistercancellistener_fuzzer:fuzztest",
    "abilitystubunregistercollaborator_fuzzer:fuzztest",
    "abilitystubunregisterconnectionobserver_fuzzer:fuzztest",
    "abilitystubunregistermissionlistener_fuzzer:fuzztest",
    "abilitystubunregisterremotemissionlistener_fuzzer:fuzztest",
    "abilitystubupdatemissionsnapshotfromwms_fuzzer:fuzztest",
    "abilitystubverifypermission_fuzzer:fuzztest",
    "abilitytransitiondone_fuzzer:fuzztest",
    "acquiredataability_fuzzer:fuzztest",
    "addabilitystagedone_fuzzer:fuzztest",
    "amsmanager_fuzzer:fuzztest",
    "amsmgrscheduler_fuzzer:fuzztest",
    "appforegroundstateobserverproxy_fuzzer:fuzztest",
    "applifecycledeal_fuzzer:fuzztest",
    "appmanager_fuzzer:fuzztest",
    "appmgrclientrest_fuzzer:fuzztest",
    "appmgrrest_fuzzer:fuzztest",
    "appmgrstub_fuzzer:fuzztest",
    "apprunningstatusproxy_fuzzer:fuzztest",
    "appstateobservermanager_fuzzer:fuzztest",
    "assertfaultcallbackdeathmgr_fuzzer:fuzztest",
    "attachabilitythread_fuzzer:fuzztest",
    "attachrenderprocess_fuzzer:fuzztest",
    "autostartupinfo_fuzzer:fuzztest",
    "bundlemgrhelper_fuzzer:fuzztest",
    "cacheprocessmanagera_fuzzer:fuzztest",
    "cacheprocessmanagerb_fuzzer:fuzztest",
    "cancelwantsender_fuzzer:fuzztest",
    "cleanallmissions_fuzzer:fuzztest",
    "cleanmission_fuzzer:fuzztest",
    "clearupapplicationdata_fuzzer:fuzztest",
    "closeability_fuzzer:fuzztest",
    "completefirstframedrawing_fuzzer:fuzztest",
    "connectability_fuzzer:fuzztest",
    "connectionobserverclient_fuzzer:fuzztest",
    "connectionobserverclientimpl_fuzzer:fuzztest",
    "connectionstatemanager_fuzzer:fuzztest",
    "continueability_fuzzer:fuzztest",
    "continuemission_fuzzer:fuzztest",
    "crowdtestinterceptor_fuzzer:fuzztest",
    "dataabilitymanager_fuzzer:fuzztest",
    "delegatordoabilityforeground_fuzzer:fuzztest",
    "disposedobserver_fuzzer:fuzztest",
    "doabilitybackground_fuzzer:fuzztest",
    "doabilityforeground_fuzzer:fuzztest",
    "dumpabilityinfodone_fuzzer:fuzztest",
    "dumpstate_fuzzer:fuzztest",
    "dumpsysstate_fuzzer:fuzztest",
    "extensionconfig_fuzzer:fuzztest",
    "extensioncontrolinterceptor_fuzzer:fuzztest",
    "extensionrecordfactory_fuzzer:fuzztest",
    "extensionrecordmanagera_fuzzer:fuzztest",
    "faultdata_fuzzer:fuzztest",
    "forcetimeoutfortest_fuzzer:fuzztest",
    "freeinstallabilityfromremote_fuzzer:fuzztest",
    "getabilityrunninginfos_fuzzer:fuzztest",
    "getapplicationinfobyprocessid_fuzzer:fuzztest",
    "getappmemorysize_fuzzer:fuzztest",
    "getconfiguration_fuzzer:fuzztest",
    "getmissionidbytoken_fuzzer:fuzztest",
    "getmissioninfos_fuzzer:fuzztest",
    "getprocessrunninginfos_fuzzer:fuzztest",
    "getprocessrunninginfosbyuserid_fuzzer:fuzztest",
    "getrunningprocessinfobytoken_fuzzer:fuzztest",
    "getwantsender_fuzzer:fuzztest",
    "handledlpapp_fuzzer:fuzztest",
    "insightintentexecutecallbackstub_fuzzer:fuzztest",
    "isramconstraineddevice_fuzzer:fuzztest",
    "jsabilityautostartupmanager_fuzzer:fuzztest",
    "jsabilityautostartupmanager_fuzzer:fuzztest",
    "killapplication_fuzzer:fuzztest",
    "killapplicationself_fuzzer:fuzztest",
    "killprocessbyabilitytoken_fuzzer:fuzztest",
    "killprocessesbybundlename_fuzzer:fuzztest",
    "killprocessesbyuserid_fuzzer:fuzztest",
    "loadability_fuzzer:fuzztest",
    "lockmissionforcleanup_fuzzer:fuzztest",
    "minimizeability_fuzzer:fuzztest",
    "missioninfomgra_fuzzer:fuzztest",
    "missioninfomgrb_fuzzer:fuzztest",
    "missioninfomgrc_fuzzer:fuzztest",
    "missionlistenerstub_fuzzer:fuzztest",
    "missionlistmanagerfourth_fuzzer:fuzztest",
    "missionlistmanagersecond_fuzzer:fuzztest",
    "missionlistmanagerthird_fuzzer:fuzztest",
    "modulerunningrecord_fuzzer:fuzztest",
    "napicommonwant_fuzzer:fuzztest",
    "notifycompletecontinuation_fuzzer:fuzztest",
    "notifycontinuationresult_fuzzer:fuzztest",
    "notifymemorylevel_fuzzer:fuzztest",
    "pendingwantmanager_fuzzer:fuzztest",
    "prepareterminate_fuzzer:fuzztest",
    "prestartnwebspawnprocess_fuzzer:fuzztest",
    "registerabilitylifecyclecallback_fuzzer:fuzztest",
    "registerapplicationstateobserver_fuzzer:fuzztest",
    "registerconfigurationobserver_fuzzer:fuzztest",
    "registerenvironmentcallback_fuzzer:fuzztest",
    "registermissionlistener_fuzzer:fuzztest",
    "releasedataability_fuzzer:fuzztest",
    "remotemissionlistenerstub_fuzzer:fuzztest",
    "renderstateobserverproxy_fuzzer:fuzztest",
    "scheduleacceptwantdone_fuzzer:fuzztest",
    "schedulecommandabilitydone_fuzzer:fuzztest",
    "scheduleconnectabilitydone_fuzzer:fuzztest",
    "scheduledisconnectabilitydone_fuzzer:fuzztest",
    "screenunlockinterceptor_fuzzer:fuzztest",
    "sendresulttoability_fuzzer:fuzztest",
    "setabilitycontroller_fuzzer:fuzztest",
    "setmissioncontinuestate_fuzzer:fuzztest",
    "setmissionicon_fuzzer:fuzztest",
    "setmissionlabel_fuzzer:fuzztest",
    "startability_fuzzer:fuzztest",
    "startabilitybycall_fuzzer:fuzztest",
    "startabilityutils_fuzzer:fuzztest",
    "startcontinuation_fuzzer:fuzztest",
    "startotherappinterceptor_fuzzer:fuzztest",
    "startrenderprocess_fuzzer:fuzztest",
    "startserviceextensionability_fuzzer:fuzztest",
    "startspecifiedability_fuzzer:fuzztest",
    "startsyncremotemissions_fuzzer:fuzztest",
    "startupresidentprocess_fuzzer:fuzztest",
    "startuser_fuzzer:fuzztest",
    "startusertestprocess_fuzzer:fuzztest",
    "stopserviceability_fuzzer:fuzztest",
    "stopserviceextensionability_fuzzer:fuzztest",
    "stopsyncremotemissions_fuzzer:fuzztest",
    "stopuser_fuzzer:fuzztest",
    "systemabilitytokencallbackstub_fuzzer:fuzztest",
    "terminateability_fuzzer:fuzztest",
    "uiabilitylifecyclemanagera_fuzzer:fuzztest",
    "uiabilitylifecyclemanagerb_fuzzer:fuzztest",
    "uiextensionrecordfactory_fuzzer:fuzztest",
    "unlockmissionforcleanup_fuzzer:fuzztest",
    "unregisterabilitylifecyclecallback_fuzzer:fuzztest",
    "unregisterapplicationstateobserver_fuzzer:fuzztest",
    "unregisterenvironmentcallback_fuzzer:fuzztest",
    "unregistermissionlistener_fuzzer:fuzztest",
    "updateabilitystate_fuzzer:fuzztest",
    "updateconfiguration_fuzzer:fuzztest",
    "updateextensionstate_fuzzer:fuzztest",
    "usercallbackstub_fuzzer:fuzztest",
    "wantagenthelperstring_fuzzer:fuzztest",
    "wantagenthelpertrigger_fuzzer:fuzztest",
    "wantsenderstub_fuzzer:fuzztest",
  ]
}
